Opened 4 years ago
Closed 4 years ago
#13137 closed bug (fixed)
[Patch] servers/app/decorator/TabDecorator.cpp: fix dereference of null pointer
Reported by: | mt | Owned by: | axeld |
---|---|---|---|
Priority: | normal | Milestone: | Unscheduled |
Component: | Servers/app_server | Version: | R1/Development |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Platform: | All |
Description
In TabDecorator::_DistributeTabSize(), 'previousTab' could be NULL at line 468 [1], so I think we need add NULL check here.
[1] http://cgit.haiku-os.org/haiku/tree/src/servers/app/decorator/TabDecorator.cpp#n468
Attachments (2)
Change History (4)
by , 4 years ago
Attachment: | 0041-TabDecorator.cpp-fix-dereference-of-null-pointer.patch added |
---|
comment:1 by , 4 years ago
patch: | 0 → 1 |
---|
by , 4 years ago
Attachment: | report-0e2c25.html added |
---|
Note:
See TracTickets
for help on using tickets.
Report by Clang Static Analyzer