TabDecorator.cpp: fix dereference of null pointer

Signed-off-by: Adrien Destugues <pulkomandy@pulkomandy.tk>

fixes #13137